画像サイズを調整

--- a/作品資料.html
+++ b/作品資料.html
@@ -562,15 +562,15 @@ code {
 <h3 id="a-id--%22deapthshadow%22a-%E3%83%87%E3%83%97%E3%82%B9%E3%82%B7%E3%83%A3%E3%83%89%E3%82%A6"><a id = "deapthShadow"></a> デプスシャドウ</h3>
 <p> 影生成のアルゴリズムはデプスシャドウ法で行っている。影を発生させる光源の位置にライトカメラを置き、光源の方向の先の座標にライトカメラの注視点を設定する。ライトカメラから見たシャドウキャスターとなるモデルを描画することで、シャドウマップを生成する。シャドウマップには、ライトカメラから見たシャドウキャスターの深度値を書き込み、シャドウマップに書き込まれた深度値とライトカメラから見たシャドウレシーバーの深度値を比較して影を落としている。深度値を参照して影を落とすかを判定しているので、シャドウキャスターより手前に影は落ちないようになっている。シャドウキャスター自身が、シャドウレシーバーとしても働き、自身の発生させた影を自身に落とすセルフシャドウも可能にしている。</p>
 <p><br><br><br><br><br>
-<img src="画像資料/シャドウ/depth_sprite_1.png" width = "50%">
+<img src="画像資料/シャドウ/depth_sprite_1.png" width = "25%">
 <br>
 ライトカメラから見たシャドウキャスターの深度値が書き込まれたシャドウマップ
 <br><br><br><br><br>
-<img src="画像資料/シャドウ/depth_sprite_2.png" width = "50%">
+<img src="画像資料/シャドウ/depth_sprite_2.png" width = "25%">
 <br>
 深度値の差を分かりやすくした画像
 <br><br><br><br><br>
-<img src="画像資料/シャドウ/scene_sprite.png" width = "80%">
+<img src="画像資料/シャドウ/scene_sprite.png" width = "40%">
 <br>
 シャドウマップを使用して影を落としたゲームシーン
 <br><br><br><br><br></p>
@@ -580,21 +580,21 @@ code {
 <p> 強い光を放つ場所から、光があふれる表現を行う為、ポストエフェクトとして、川瀬式ブルームを行っている。ブルームを行う為に、シーンの輝度抽出を行い、シーンの輝度が一定以上の部分のみを書き込んだテクスチャを生成する。生成された輝度抽出テクスチャに、ブラーを複数回かけてぼかす。解像度の違うぼかしたテクスチャを複数生成する。ぼかしたテクスチャ全ての平均をとって最終的なブルーム用のテクスチャを生成し、ブルーム用テクスチャを、シーンに加算合成して、光があふれる表現を実装している。川瀬式のブルーム表現によって、輝度が高くなった場合の光の広がり方が、通常のブルームより自然な表現になっている。ブラーのアルゴリズムはガウシアンブラーを使用している。
 <br><br><br><br><br><br></p>
 <p>
- <img src="画像資料/ブルーム/bloom_before.png" width = "40%">　　　　　　<img src="画像資料/ブルーム/bloom_Luminance.png" width = "40%">
+ <img src="画像資料/ブルーム/bloom_before.png" width = "20%">　　　　　　<img src="画像資料/ブルーム/bloom_Luminance.png" width = "20%">
 </p>
-<p>シーンのテクスチャ　　　　　　　　　　　　　　　　輝度抽出を行ったテクスチャ
-<br><br><br><br><br><br></p>
+<p>シーンのテクスチャ                                輝度抽出を行ったテクスチャ</p>
+<p><br><br><br><br><br><br></p>
 <p>
- <img src="画像資料/ブルーム/bloom_GaussianBlur_1.png" width = "40%">
- <img src="画像資料/ブルーム/bloom_GaussianBlur_2.png" width = "40%">
+ <img src="画像資料/ブルーム/bloom_GaussianBlur_1.png" width = "20%">
+ <img src="画像資料/ブルーム/bloom_GaussianBlur_2.png" width = "20%">
 </p>
 <p>
- <img src="画像資料/ブルーム/bloom_GaussianBlur_3.png" width = "40%">
- <img src="画像資料/ブルーム/bloom_GaussianBlur_4.png" width = "40%">
+ <img src="画像資料/ブルーム/bloom_GaussianBlur_3.png" width = "20%">
+ <img src="画像資料/ブルーム/bloom_GaussianBlur_4.png" width = "20%">
 </p>
 輝度抽出テクスチャに複数回ブラーをかけてぼかす
 <br><br><br><br><br><br>
-<img src="画像資料/ブルーム/bloom_After.png" width = "40%">
+<img src="画像資料/ブルーム/bloom_After.png" width = "20%">
 <br>
 ブラーをかけたテクスチャの平均を取った画像をシーンに加算合成して完成
 </li>
@@ -602,11 +602,11 @@ code {
 <h3 id="a-id--%22navimesh%22a%E7%B5%8C%E8%B7%AF%E6%8E%A2%E7%B4%A2"><a id = "naviMesh"></a>経路探索</h3>
 <p> エネミーの動きがステージの障害物によって阻害されないようにするために、経路探索による移動を実装している。3ds Maxで、ステージ内の通れない場所を削除した板ポリゴンを作成し、ナビゲーションメッシュとして出力する。出力されたナビゲーションメッシュを読み込み、ポリゴン情報を元に、Aスターを使った経路探索を行う。経路に使われるポリゴンを、セルと呼ぶ。セル一つに、３頂点・中心座標・隣接セルの情報があり、隣接セルが無い場所は経路に含まれない為、経路をナビゲーションメッシュ上のみに制限できる。探索開始地点に最も近いセルから、探索終了地点までのセルの繋がりを、経路情報として作成する。経路情報によって生成された、セルの中心座標の繋がりを使って進み、中心座標に近づくと次のセルへ進むことを繰り返し、終点まで進むことで、障害物を回避して移動する経路移動の処理を実装している。
 <br><br><br><br><br><br></p>
- <img src="画像資料/経路探索/stage_model.png" width = "80%">
+ <img src="画像資料/経路探索/stage_model.png" width = "40%">
  <br>
  ステージの3Dモデルを真上からみた図
  <br><br><br><br><br><br>
- <img src="画像資料/経路探索/naviMesh.png" width = "80%">
+ <img src="画像資料/経路探索/naviMesh.png" width = "40%">
  <br>
  ステージの通れない所を削除した板ポリゴン
  <br><br><br><br><br><br>
@@ -618,17 +618,17 @@ code {
 <h3 id="a-id--%22move%22a%E7%A7%BB%E5%8B%95%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6"><a id = "move"></a>移動について</h3>
 <p> プレイヤーとエネミーの移動には慣性が乗るようになっており滑らかな移動を表現している。急な移動方向の変化が起こっても、いきなり移動方向が切り替わらずに、緩やかに変化するようになっている。</p>
 <p><br><br><br><br><br><br>
-<img src="画像資料/その他/move.png" width = "80%" >
+<img src="画像資料/その他/move.png" width = "40%" >
 <br><br><br><br><br><br>
 経路探索による移動だけでは、ナビゲーションメッシュのポリゴン分割量によって、目標の近くまで来たのに遠回りするような挙動を取る場合がある。そこで、目標地点との距離が近くなると経路の移動をやめ、通常の移動処理に切り替えるようにすることで、目標との距離が近いのに遠回りすることが起こりにくくなっている。
 <br><br><br><br><br><br>
-<img src="画像資料/その他/routemove.png" width = "80%" >
+<img src="画像資料/その他/routemove.png" width = "40%" >
 <br><br><br><br><br><br></p>
 </li>
 <li>
 <h3 id="a-id--%22attack%22a%E6%94%BB%E6%92%83%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6"><a id = "attack"></a>攻撃について</h3>
 <p> プレイヤーの近接攻撃とエネミーとの当たり判定の付け方は、距離と方向で行っているが、当たり判定のタイミングに一工夫を入れた。攻撃ボタンが押されたときに判定を出すだけでは、攻撃アニメーションの再生開始時にしか当たり判定が出ずに、違和感の大きい動きになってしまう。そこで、攻撃ボタンが押されると攻撃状態に移行し、一定時間後に攻撃状態から復帰する処理にすることで、攻撃アニメーションの再生時間の間攻撃判定を出し続けることができる。しかし、それだけでは、攻撃アニメーション中の、攻撃の予備動作（剣を振りかぶる）や、攻撃の終了後の動作（振りぬいた剣を元に戻す）にも当たり判定が出てしまう。攻撃状態に移行している間に、当たり判定を出す時間を定め、その間だけ当たり判定を取ることで、アニメーションの見た目と攻撃判定を一致させ、違和感を無くしている。また、攻撃モーション中に移動できてしまうと、見た目や判定に違和感が出てしまうので、攻撃状態に移行している間は、移動の入力を制限して、移動を受け付けなくしている。慣性はかかるので、走った勢いを利用して滑りながら攻撃することは可能になっている。<br>
-<img src="画像資料/その他/attack_before.png" width = "80%" >
+<img src="画像資料/その他/attack_before.png" width = "40%" >
 <br>
 振りかぶる動作中に当たり判定はない。
 <br><br><br><br><br><br></p>
@@ -637,11 +637,11 @@ code {
 <h3 id="a-id--%22enemy%22a%E3%82%A8%E3%83%8D%E3%83%9F%E3%83%BC%E3%81%AE%E7%A8%AE%E9%A1%9E"><a id = "enemy"></a>エネミーの種類</h3>
 <p> エネミーは防衛対象のみを狙う者とプレイヤーを見つけると狙いをプレイヤーに変える者がいる。防衛対象を狙う者は、一直線に防衛対象に向かい、プレイヤーを無視する。プレイヤーに狙いを変える者は視界にプレイヤーを捉えると、プレイヤーに向けて追跡を開始し、プレイヤーに向けて攻撃してくる。しばらく視界に捉えることが出来ないでいると、プレイヤーに向けての追跡を止め、防衛対象への移動に戻る。プレイヤーを追跡するエネミーを引き付ければ、防衛対象から遠ざけて、まとめて撃破することも可能になる。エネミーの動きを自分でコントロールすることで、楽にクリアすることができるようになっている。
 <br><br><br><br><br><br>
-<img src="画像資料/その他/walker_attack.png" width = "80%" >
+<img src="画像資料/その他/walker_attack.png" width = "40%" >
 <br>
 防衛対象を攻撃するエネミー
 <br><br><br><br><br><br></p>
- <img src="画像資料/その他/chaser_attack.png" width = "80%" >
+ <img src="画像資料/その他/chaser_attack.png" width = "40%" >
  <br>
  プレイヤーに攻撃するエネミー
  <br><br><br><br><br><br>
@@ -650,7 +650,7 @@ code {
 <h3 id="a-id--%22item%22a%E3%82%A2%E3%82%A4%E3%83%86%E3%83%A0"><a id = "item"></a>アイテム</h3>
 <p> エネミーを倒すとアイテムを落とすことがある。アイテムを拾うと、最大３つがアイテムスロットに格納され、いつでも使うことができる。最大まで保持している場合はアイテムを新たに入手することは出来ない。アイテムを選択して使用する事で、種類に応じた効果が発動し、不利な状況でも覆すことができる。同じ種類のアイテムを複数保持できる上に、使用するタイミングは自分で決めれるので、自分で戦略を立てたプレイができる。
 <br><br><br><br><br>
-<img src="画像資料/その他/item_ui.png" width = "40%" >
+<img src="画像資料/その他/item_ui.png" width = "20%" >
 <br>
 アイテムスロットに格納されたアイテム。左から、栄養ドリンク、爆弾、修理道具。
 <br><br><br><br><br><br></p>
@@ -659,7 +659,7 @@ code {
 <h3 id="a-id--%22minimap%22a%E3%83%9F%E3%83%8B%E3%83%9E%E3%83%83%E3%83%97"><a id = "miniMap"></a>ミニマップ</h3>
 <p> エネミーは様々な方向から出現し、防衛対象目掛けて移動してくる。ステージには壁が多く、画面に映る範囲の情報だけでは、迫り来るエネミーの軍団に対応することは難しい。そこで、プレイヤーを中心とした一定範囲をミニマップとして表示し、画面に映っていないエネミーの位置も把握出来るようになっている。ミニマップは、別のカメラから見た映像を表示している。プレイヤーの真上から見下ろすマップカメラを用意し、ミニマップは３ｄのワールドでも２ｄ的な位置を求めるので、ミニマップを描画するカメラは平行投影で描画を行う。ゲームシーンとは別のレンダーターゲットに、マップカメラから映る様子を描画し、レンダーターゲットのテクスチャを、画像として表示している。ただゲームシーンを映すだけでは、ミニマップには必要のないポストエフェクトの効果なども反映されてしまう。正確な位置が分かれば、余計な情報はいらないので、画面をそのまま表示するのではなく、ミニマップに表示したい物の代わりとなるマップ用の別モデルを表示する方式にした。シンプルなマップ用の３ｄモデルを、余計な計算を行わないシェーダーファイルで、表示したい物と同じ位置に表示することで、処理を軽減しつつ、分かりやすいマップ表示を実現している。
 <br><br><br><br><br>
-<img src="画像資料/その他/scene_noMap.png" width = "60%" >　　　　<img src="画像資料/その他/mini_map.png" width = "20%" >
+<img src="画像資料/その他/scene_noMap.png" width = "30%" >　　　　<img src="画像資料/その他/mini_map.png" width = "10%" >
 <br>
 ミニマップに周囲の位置関係が表示される
 <br><br><br><br><br><br></p>
