学園祭のポートフォリオの資料を追加

--- a/学園祭作品資料.html
+++ b/学園祭作品資料.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>作品資料.md</title>
+<title>学園祭作品資料.md</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
 <style>
@@ -374,30 +374,41 @@ code {
 <li><a href="#sorceCode">担当ソースコード</a></li>
 <li>技術要素
 <ul>
-<li><a href="">ディレクションライト</a></li>
-<li><a href="">ポイントライト</a></li>
-<li><a href="">半球ライト</a></li>
+<li><a href="#directionLight">ディレクションライト</a></li>
+<li><a href="#pointLight">ポイントライト</a></li>
+<li><a href="#spotLight">スポットライト</a></li>
+<li><a href="#hemiSphereLight">半球ライト</a></li>
 </ul>
 </li>
 <li>こだわった要素
 <ul>
-<li><a href="">ステージのライティング</a></li>
+<li><a href="#menu">メニュー画面の演出</a></li>
+<li><a href="#stageLighting">ステージのライティング</a></li>
+<li><a href="#PointLightEfficacy">ポイントライトの効果</a></li>
+<li><a href="#playerBlow">プレイヤーの吹き飛び具合</a></li>
+<li><a href="#guard">ガードによる攻防</a></li>
+<li><a href="#item">アイテムの活用</a></li>
+<li><a href="#score">スコアの表示</a></li>
+<li><a href="#result">リザルトの演出</a></li>
+<li><a href="#mode">モード切り替え</a></li>
 </ul>
 </li>
 </ol>
+<hr>
 <h1 id="a-id--%22overview%22a%E6%A6%82%E8%A6%81"><a id = "overview"></a>概要</h1>
 <h4 id="%E4%BD%9C%E5%93%81%E5%90%8Dstrikergirls">作品名：StrikerGirls</h4>
-<img src="image/Ball.png" width = "80%" >
+<p><img src="image/title.png" width = "80%" ><br>
+ ステージに一つあるボールを蹴って、他のプレイヤーにぶつけてスコアを稼ぎ、誰が一番多くスコアを多く稼げるかを競う対戦アクションゲーム。２０２１年７月の河原学園学園祭に向けて制作し、展示を行った。</p>
 <h4 id="%E3%83%97%E3%83%AC%E3%82%A4%E4%BA%BA%E6%95%B0%EF%BC%92%EF%BC%94%E4%BA%BA">プレイ人数：２～４人</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%B3%E5%AD%A6%E5%86%85%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%B3%E3%82%92%E6%94%B9%E9%80%A0%E3%81%97%E3%81%9F%E7%89%A9">使用エンジン：学内エンジンを改造した物</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E8%A8%80%E8%AA%9Echlsl">使用言語：C++、HLSL</h4>
-<h4 id="%E4%BD%BF%E7%94%A8%E3%83%84%E3%83%BC%E3%83%ABvisual-studio-2019visual-studio-code3ds-max-2022renderdoc">使用ツール：Visual Studio 2019、Visual Studio Code、3ds Max 2022、RenderDoc</h4>
+<h4 id="%E4%BD%BF%E7%94%A8%E3%83%84%E3%83%BC%E3%83%ABvisual-studio-2019visual-studio-code">使用ツール：Visual Studio 2019、Visual Studio Code</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E3%83%A9%E3%82%A4%E3%83%96%E3%83%A9%E3%83%AAeffekseerdirectxtk12">使用ライブラリ：Effekseer、DirectXTK12</h4>
 <h4 id="%E5%8B%95%E4%BD%9C%E7%92%B0%E5%A2%83windows10directx12">動作環境：Windows10、DirectX12</h4>
 <h4 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B0%EF%BC%94%E4%BA%BA">制作人数：４人</h4>
 <h4 id="%E5%88%B6%E4%BD%9C%E6%9C%9F%E9%96%93%EF%BC%91%E3%83%B6%E6%9C%88">制作期間：１ヶ月</h4>
 <h4 id="githuburlhttpsgithubcomtks-2000teamdgit">GitHubURL：<a href="https://github.com/tks-2000/teamD.git">https://github.com/tks-2000/teamD.git</a></h4>
-<p> このゲームはステージに一つあるボールを蹴って、他のプレイヤーにぶつけてスコアを稼ぎ、誰が一番多くスコアを多く稼げるかを競う対戦アクションゲームです。２０２１年７月の河原学園学園祭に向けて制作し、展示を行った。</p>
+<hr>
 <h1 id="a-id--%22operation%22a%E6%93%8D%E4%BD%9C%E8%AA%AC%E6%98%8E"><a id = "operation"></a>操作説明</h1>
 <ul>
 <li>左スティック：移動</li>
@@ -405,10 +416,11 @@ code {
 <li>Rボタン：ダッシュ</li>
 <li>Lボタン：ガード</li>
 </ul>
+<hr>
 <h1 id="a-id--%22sorcecode%22a%E6%8B%85%E5%BD%93%E3%82%BD%E3%83%BC%E3%82%B9%E3%82%B3%E3%83%BC%E3%83%89"><a id = "sorceCode"></a>担当ソースコード</h1>
-<ul>
-<li>
-<h4 id="%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%B3%E9%83%A8%E5%88%86%E5%A4%AA%E5%AD%97%E3%81%AF%E6%94%B9%E9%80%A0%E3%81%AE%E3%81%BF">エンジン部分(太字は改造のみ)</h4>
+<details>
+<summary>エンジン部分(太字は改造のみ)</summary>
+<div>
 <ul>
 <li>Lighting.cpp</li>
 <li>Lighting.h</li>
@@ -418,19 +430,23 @@ code {
 <li>SpriteRender.h</li>
 <li>FontRender.cpp</li>
 <li>FontRender.h</li>
-<li>material.cpp</li>
-<li>material.h</li>
-<li>MeshParts.cpp</li>
-<li>MeshParts.h</li>
-<li>Model.cpp</li>
-<li>Model.h</li>
-<li>tkEngine.h</li>
-<li>TkmFile.cpp</li>
-<li>TkmFile.h</li>
+<li>model.fx</li>
+<li><strong>material.cpp</strong></li>
+<li><strong>material.h</strong></li>
+<li><strong>MeshParts.cpp</strong></li>
+<li><strong>MeshParts.h</strong></li>
+<li><strong>Model.cpp</strong></li>
+<li><strong>Model.h</strong></li>
+<li><strong>tkEngine.h</strong></li>
+<li><strong>TkmFile.cpp</strong></li>
+<li><strong>TkmFile.h</strong></li>
 </ul>
-</li>
-<li>
-<h4 id="%E3%82%B2%E3%83%BC%E3%83%A0%E9%83%A8%E5%88%86%E5%A4%AA%E5%AD%97%E3%81%AF%E4%B8%80%E9%83%A8%E3%81%AE%E3%81%BF">ゲーム部分(太字は一部のみ)</h4>
+</div>
+</details>
+<br>
+<details>
+<summary>ゲーム部分(太字は一部のみ)</summary>
+<div>
 <ul>
 <li>BackGround.cpp</li>
 <li>BackGround.h</li>
@@ -474,34 +490,123 @@ code {
 <li><strong>Player.cpp</strong></li>
 <li><strong>Player.h</strong></li>
 </ul>
+</div>
+</details>
+<br>
+<hr>
+<h1 id="%E6%8A%80%E8%A1%93%E8%A6%81%E7%B4%A0">技術要素</h1>
+<ul>
+<li>
+<h3 id="a-id--%22directionlight%22a%E3%83%87%E3%82%A3%E3%83%AC%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3%E3%83%A9%E3%82%A4%E3%83%88"><a id = "directionLight"></a>ディレクションライト</h3>
 </li>
 </ul>
-<h1 id="%E6%8A%80%E8%A1%93%E8%A6%81%E7%B4%A0">技術要素</h1>
+<p>ライティングとしてディレクションライトを実装している。拡散反射光はランバート拡散反射モデル、鏡面反射はフォン鏡面反射モデル、環境光は大胆に近似した計算モデルを使用している。</p>
+<ul>
+<li>
+<h3 id="a-id--%22pointlight%22a%E3%83%9D%E3%82%A4%E3%83%B3%E3%83%88%E3%83%A9%E3%82%A4%E3%83%88"><a id = "pointLight"></a>ポイントライト</h3>
+</li>
+</ul>
+<p>ポイントライトを実装している。ディレクションライトから方向を無くし、座標と影響範囲を設定し、影響範囲内にあるサーフェースに、距離に応じた減衰率を乗算したカラーを加算している。</p>
+<ul>
+<li>
+<h3 id="a-id--%22spotlight%22a%E3%82%B9%E3%83%9D%E3%83%83%E3%83%88%E3%83%A9%E3%82%A4%E3%83%88"><a id = "spotLight"></a>スポットライト</h3>
+</li>
+</ul>
+<p>特定の部分のみを照らす、スポットライトを実装している。ポイントライトに射出方向と射出角度を追加し、サーフェイスへの入射光とスポットライトの射出方向との角度を、内積と逆余弦関数を利用して求める。角度に応じた減衰率を乗算したカラーを加算してスポットライトを表現している。</p>
+<ul>
+<li>
+<h3 id="a-id--%22hemispherelight%22a%E5%8D%8A%E7%90%83%E3%83%A9%E3%82%A4%E3%83%88"><a id = "hemiSphereLight"></a>半球ライト</h3>
+</li>
+</ul>
+<p>環境光として半球ライトを実装している。まず、空から照らす光の天球色と、地面から照り返す光の地面色を設定する。地面の法線とサーフェースの法線の内積の結果で、天球色と地面色を線形補完したカラーを環境光として最終的なライティングの結果に加えている。<br>
+<img src="image/noLight.png" width = "40%" > <img src="image/onLight.png" width = "40%" ><br>
+ライティング無し（左）とライティング有り（右）の比較<br></p>
+<hr>
 <h1 id="%E3%81%93%E3%81%A0%E3%82%8F%E3%81%A3%E3%81%9F%E8%A6%81%E7%B4%A0">こだわった要素</h1>
+<ul>
+<li>
+<h3 id="a-id--%22menu%22a%E3%83%A1%E3%83%8B%E3%83%A5%E3%83%BC%E7%94%BB%E9%9D%A2%E3%81%AE%E6%BC%94%E5%87%BA"><a id = "menu"></a>メニュー画面の演出</h3>
+</li>
+</ul>
+<p>メニュー画面ではプレイする人数を選択する事ができる。選択した人数分だけ、キャラクターが画面手前を向き、選択されていないキャラクターは画面奥を向いたままになる。ゲームを開始すると選択した人数分のプレイヤーが飛んでいきゲーム画面に切り替わる。人数選択でも、ゲーム的な演出を追加したいと考え、このようなメニュー画面を作成した。<br>
+<img src="image/menu.png" width = "40%" ><br>
+選択した人数分のキャラクターがこちらを向く<br>
+<img src="image/gameStart.png" width = "40%" ><br>
+人数を決定すると飛んで行く<br></p>
 <ul>
 <li>
 <h3 id="a-id--%22stagelighting%22a-%E3%82%B9%E3%83%86%E3%83%BC%E3%82%B8%E3%81%AE%E3%83%A9%E3%82%A4%E3%83%86%E3%82%A3%E3%83%B3%E3%82%B0"><a id = "stageLighting"></a> ステージのライティング</h3>
 </li>
 </ul>
-<p>ステージに当たっている半球ライトは、時間経過とともに色合いが変化していくように設定した。この色の変化は、変化前の色と変化後の色を設定し、二つの色をタイマーを補完率として線形補完した色を使用する事で表現している。色の変化は１ゲーム中に２回起こり、制限時間の半分を過ぎると二回目の変化が起こる。タイマーは、残り時間を制限時間で除算した値を使用することで、時間経過とともに、自然に変化する表現になっている。カメラの位置が固定なので、ゲーム画面少しでも変化があった方が、視覚的に楽しめると考え、ライティングに変化を加えた。</p>
+<p>ステージに当たっている半球ライトは、時間経過とともに色合いが変化していくように設定した。この色の変化は、変化前の色と変化後の色を設定し、二つの色をタイマーを補完率として線形補完した色を使用する事で表現している。色の変化は１ゲーム中に２回起こり、制限時間の半分を過ぎると二回目の変化が起こる。補完率に使用するタイマーは、残り時間を制限時間で除算した値を使用することで、時間経過とともに、自然に変化する表現になっている。カメラの位置が固定なので、ゲーム画面に少しでも変化があった方が、視覚的に楽しめると考え、ライティングに変化を加えた。<br>
+<img src="image/gameScene_1.png" width = "20%" > <img src="image/gameScene_2.png" width = "20%" > <img src="image/gameScene_3.png" width = "20%" ><br>
+時間と共にステージのライティングが変化している様子<br></p>
 <ul>
 <li>
 <h3 id="a-id--%22pointlightefficacy%22a-%E3%83%9D%E3%82%A4%E3%83%B3%E3%83%88%E3%83%A9%E3%82%A4%E3%83%88%E3%81%AE%E5%8A%B9%E6%9E%9C"><a id = "PointLightEfficacy"></a> ポイントライトの効果</h3>
 </li>
 </ul>
-<p>プレイヤーにはそれぞれシンボルカラーがあり、ボールを蹴った際に、蹴ったプレイヤーのカラーにボールが光る。これらはポイントライトで表現しており、自分の位置や、ボールの位置が分かりやすくなると考え、実装した。プレイヤーが場外から復帰してくる時に、一定時間無敵になるが、その時間を視覚的に分かりやすくするために、無敵時間の間ポイントライトを点滅させている。</p>
+<p>プレイヤーにはそれぞれシンボルカラーがあり、ボールを蹴った際に、蹴ったプレイヤーのカラーにボールが光る。これらはポイントライトで表現しており、自分の位置や、ボールの位置、誰が蹴ったボールなのかが分かりやすくなると考え、実装した。プレイヤーが場外から復帰してくる時に、一定時間無敵になるが、その時間を視覚的に分かりやすくするために、無敵時間の間ポイントライトを点滅させている。<br>
+<img src="image/kiseki.png" width = "40%" ><br>
+ボールが蹴ったプレイヤーの色に光って動いている様子</p>
 <ul>
 <li>
-<h3 id="%E3%83%97%E3%83%AC%E3%82%A4%E3%83%A4%E3%83%BC%E3%81%AE%E5%90%B9%E3%81%8D%E9%A3%9B%E3%81%B3%E5%85%B7%E5%90%88">プレイヤーの吹き飛び具合</h3>
+<h3 id="a-id--%22playerblow%22a%E3%83%97%E3%83%AC%E3%82%A4%E3%83%A4%E3%83%BC%E3%81%AE%E5%90%B9%E3%81%8D%E9%A3%9B%E3%81%B3%E5%85%B7%E5%90%88"><a id = "playerBlow"></a>プレイヤーの吹き飛び具合</h3>
 </li>
 </ul>
-<p>プレイヤーがボールに接触すると、ボールの勢いに応じた力で吹き飛ばされる。</p>
+<p>プレイヤーが動いているボールに接触すると、ボールの速度に応じた力で吹き飛ばされる。一定以上の勢いで吹き飛ばされると、ステージの壁を超えてしまい、そのまま場外へ落ちていってしまう。ステージ端に近いとボールが来る方向を絞れるので身を守りやすいが、もしボールに接触した際に場外に出てしまいやすいという問題もあるので、ボールの速度に気を付けて立ちまわることが求められるようになっている。<br>
+<img src="image/zhimetu.png" width = "40%" ><br>
+速度の乗ったボールにぶつかると場外へ出てしまう<br></p>
 <ul>
 <li>
-<h3 id="%E3%82%AC%E3%83%BC%E3%83%89%E3%81%AB%E3%82%88%E3%82%8B%E6%94%BB%E9%98%B2">ガードによる攻防</h3>
+<h3 id="a-id--%22guard%22a%E3%82%AC%E3%83%BC%E3%83%89%E3%81%AB%E3%82%88%E3%82%8B%E6%94%BB%E9%98%B2"><a id = "guard"></a>ガードによる攻防</h3>
 </li>
 </ul>
-<p>プレイヤーは、ガードを行うことで、ボールに接触しても、吹き飛ばされずに耐えることができる。ガードをしている間は、ガードの耐久値が減り続ける上に、移動が遅くなる欠点があるので、適切なタイミングで使用しなければ、効果を発揮できないようになっている。</p>
+<p>プレイヤーは、ガードを行うことで、ボールに接触しても、吹き飛ばされずに耐えることができる。ガードをしている間は、ガードの耐久値が減り続け、無くなるとガードブレイクし、大きな隙を晒してしまう。また、ボールをガードしたときに、ボールの速度が速すぎても、ガードしきれずにガードブレイクしてしまう。さらに、ガード中は移動が遅くなる欠点があるので、安全な状態で自由に動くことは出来ないようになっている。ガードの出始めにはジャストガード判定があり、成功するとボールを速度関係なく完全に停止させて受け止めることができ、一定時間自分のキック力、ガード耐久値回復速度、スタミナ回復速度が上昇する。ジャストガードで受け止める事ができると、即座に反撃をすることが可能になっている。ガードは便利だが、適切なタイミングで使用しなければ、効果を発揮できないようになっている。<br>
+<img src="image/guard.png" width = "40%" ><br>
+ガードをしている様子<br>
+<img src="image/justGuardPowerUp.png" width = "40%" ><br>
+ジャストガード成功時にはパワーアップが発動する<br></p>
+<ul>
+<li>
+<h3 id="a-id--%22item%22a%E3%82%A2%E3%82%A4%E3%83%86%E3%83%A0%E3%81%AE%E6%B4%BB%E7%94%A8"><a id = "item"></a>アイテムの活用</h3>
+</li>
+</ul>
+<p>ステージには最大４つのアイテムボックスが配置されており、ボールをアイテムボックスに当てると、開いて中のアイテムを取ることが出来る。アイテムを取ると一定時間能力が上がるので、上がった能力を生かして対戦を有利に進めることが出来る。アイテムボックスにどのアイテムが入っているかはランダムで、アイテムが拾われて一定時間経つと、またアイテムボックスが降って来る。<br>
+<img src="image/box.png" width = "40%" ><br>
+アイテムボックスの外観<br>
+<img src="image/boxOpen.png" width = "40%" ><br>
+アイテムボックスの開いている様子<br></p>
+<ul>
+<li>
+<h3 id="a-id--%22score%22a%E3%82%B9%E3%82%B3%E3%82%A2%E3%81%AE%E8%A1%A8%E7%A4%BA"><a id = "score"></a>スコアの表示</h3>
+</li>
+</ul>
+<p>プレイヤー全員には、それぞれ現在のスコアが常に表示されている。加点、減点が起こるとその都度表記され、数字もいきなり表示が替わるのではなく、数字がメーターのように変化していくようになっている。また、ゲームの残り時間が僅かになるとスコアの数字が隠され、誰が何位なのかを分からなくすることで、最後までゲームを楽しくプレイして貰えるようにし、リザルト画面で誰が一位なのかをプレイヤー全員で楽しく見れる工夫をした。<br>
+<img src="image/score.png" width = "40%" ><br>
+加点や減点が起こるとプレイヤーのスコアに表示される<br>
+<img src="image/scoreMask.png" width = "40%" ><br>
+残り時間が僅かになると表示が隠される<br></p>
+<ul>
+<li>
+<h3 id="a-id--%22result%22a%E3%83%AA%E3%82%B6%E3%83%AB%E3%83%88%E3%81%AE%E6%BC%94%E5%87%BA"><a id = "result"></a>リザルトの演出</h3>
+</li>
+</ul>
+<p>リザルト画面では、いきなり全員の順位を出しても、あまり面白味がないので、順位が低いプレイヤーから表示していき、一位のプレイヤーが表示されると同時にファンファーレが鳴るような演出になっている。前述のスコア表示を隠す効果で、リザルト画面でもプレイヤーたちはまだ自分が何位か分からないので、１人ずつ表示することで、プレイヤーが何位なのかを考えさせ、バトル後もゲームにのめりこんでもらえると考え、この演出を実装した。<br>
+<img src="image/result.png" width = "40%" ><br>
+スコアの低かった順にプレイヤーが、画面右からスライドして表示される<br>
+<img src="image/fanfare.png" width = "40%" ><br>
+一位のプレイヤーが表示されるとファンファーレと共に紙吹雪で祝福する<br></p>
+<ul>
+<li>
+<h3 id="a-id--%22mode%22a%E3%83%A2%E3%83%BC%E3%83%89%E5%88%87%E3%82%8A%E6%9B%BF%E3%81%88"><a id = "mode"></a>モード切り替え</h3>
+</li>
+</ul>
+<p>隠しコマンドとしてゲームモード切り替えがある。メニュー画面であるボタンを押すと画面が切り替わり、もう一つのモードでゲームをプレイ出来る。制限時間が伸び、アイテムボックスが出現しないようになり、アイテムに頼らず自分の実力だけで対戦するモードで遊ぶことが出来る。アイテムによるランダム要素を嫌う人もいると考えたので、このようなモードを実装した。アイテムボックスにぶつかることによる、ボールの軌道の変化も起こらないので、ボールの動きをよく見て対処する事が求められる、上級者向けのモードになっている。<br>
+<img src="image/uraMenu.png" width = "40%" ><br>
+切り替わったメニュー画面<br>
+<img src="image/uraGameScene.png" width = "40%" ><br>
+アイテムボックスが無くなりステージの雰囲気も変化する<br></p>
 
 </body>
 </html>
