--- a/作品資料.html
+++ b/作品資料.html
@@ -397,9 +397,11 @@ code {
 </ul>
 </li>
 </ol>
+<hr>
 <h1 id="a-id--%22overview%22a%E6%A6%82%E8%A6%81"><a id = "overview"></a>概要</h1>
 <h4 id="%E4%BD%9C%E5%93%81%E5%90%8D%E5%B0%8F%E3%81%95%E3%81%AA%E5%AE%88%E8%AD%B7%E8%80%85">作品名：小さな守護者</h4>
-<img src="画像資料/その他/title.png" width = "80%" >
+<p><img src="画像資料/その他/title.png" width = "80%" ><br>
+ステージ中央にある防衛目標を、四方から迫る敵から一定時間守り抜くタワーディフェンスゲーム。</p>
 <h4 id="%E4%BD%BF%E7%94%A8%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%B3%E5%AD%A6%E5%86%85%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%B3%E3%82%92%E6%94%B9%E9%80%A0%E3%81%97%E3%81%9F%E7%89%A9">使用エンジン：学内エンジンを改造した物</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E8%A8%80%E8%AA%9Echlsl">使用言語：C++、HLSL</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E3%83%84%E3%83%BC%E3%83%ABvisual-studio-2019visual-studio-code3ds-max-2022renderdoc">使用ツール：Visual Studio 2019、Visual Studio Code、3ds Max 2022、RenderDoc</h4>
@@ -408,6 +410,7 @@ code {
 <h4 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B0%EF%BC%91%E4%BA%BA">制作人数：１人</h4>
 <h4 id="%E5%88%B6%E4%BD%9C%E6%9C%9F%E9%96%93%EF%BC%95%E3%83%B6%E6%9C%88">制作期間：５ヶ月</h4>
 <h4 id="githuburlhttpsgithubcomtks-2000personalproductiongit">GitHubURL：<a href="https://github.com/tks-2000/PersonalProduction.git">https://github.com/tks-2000/PersonalProduction.git</a></h4>
+<hr>
 <h1 id="a-id--%22operation%22a%E6%93%8D%E4%BD%9C%E8%AA%AC%E6%98%8E"><a id = "operation"></a>操作説明</h1>
 <h4 id="a%E3%83%9C%E3%82%BF%E3%83%B3%E8%BF%91%E6%8E%A5%E6%94%BB%E6%92%83">Aボタン：近接攻撃</h4>
 <h4 id="y%E3%83%9C%E3%82%BF%E3%83%B3%E3%82%A2%E3%82%A4%E3%83%86%E3%83%A0%E4%BD%BF%E7%94%A8">Yボタン：アイテム使用</h4>
@@ -417,10 +420,11 @@ code {
 <h4 id="r%E3%83%88%E3%83%AA%E3%82%AC%E3%83%BC%E3%83%80%E3%83%83%E3%82%B7%E3%83%A5">Rトリガー：ダッシュ</h4>
 <h4 id="r%E3%82%B9%E3%83%86%E3%82%A3%E3%83%83%E3%82%AF%E3%82%AB%E3%83%A1%E3%83%A9%E5%9B%9E%E8%BB%A2">Rスティック：カメラ回転</h4>
 <h4 id="l%E3%82%B9%E3%83%86%E3%82%A3%E3%83%83%E3%82%AF%E7%A7%BB%E5%8B%95">Lスティック：移動</h4>
+<hr>
 <h1 id="a-id--%22sorcecode%22a%E6%8B%85%E5%BD%93%E3%82%BD%E3%83%BC%E3%82%B9%E3%82%B3%E3%83%BC%E3%83%89"><a id = "sorceCode"></a>担当ソースコード</h1>
-<ul>
-<li>
-<h4 id="%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%B3%E9%83%A8%E5%88%86%E5%A4%AA%E5%AD%97%E3%81%AF%E6%94%B9%E9%80%A0%E3%81%AE%E3%81%BF">エンジン部分(太字は改造のみ)</h4>
+<details>
+<summary>エンジン部分(太字は改造のみ)</summary>
+<div>
 <ul>
 <li>RenderingEngine.cpp</li>
 <li>RenderingEngine.h</li>
@@ -466,9 +470,12 @@ code {
 <li><strong>TkmFile.cpp</strong></li>
 <li><strong>TkmFile.h</strong></li>
 </ul>
-</li>
-<li>
-<h4 id="%E3%82%B2%E3%83%BC%E3%83%A0%E9%83%A8%E5%88%86">ゲーム部分</h4>
+</div>
+</details>
+<br>
+<details>
+<summary>ゲーム部分</summary>
+<div>
 <ul>
 <li>Game.cpp</li>
 <li>Game.h</li>
@@ -551,11 +558,12 @@ code {
 <li>BaseEndurance.cpp</li>
 <li>BaseEndurance.h</li>
 <li>RemainingBullets.cpp</li>
-<li>RemainingBullets.h
-<br><br><br><br><br></li>
+<li>RemainingBullets.h</li>
 </ul>
-</li>
-</ul>
+</div>
+</details>
+<hr>
+<p><br><br><br><br><br></p>
 <h1 id="a-id--%22technicalelements%22a-%E6%8A%80%E8%A1%93%E8%A6%81%E7%B4%A0"><a id = "technicalElements"></a> 技術要素</h1>
 <ul>
 <li>
@@ -612,6 +620,7 @@ code {
  <br><br><br><br><br><br>
 </li>
 </ul>
+<hr>
 <h1 id="a-id--%22kodawari%22a%E3%81%93%E3%81%A0%E3%82%8F%E3%81%A3%E3%81%9F%E8%A6%81%E7%B4%A0"><a id = "kodawari"></a>こだわった要素</h1>
 <ul>
 <li>
@@ -661,8 +670,9 @@ code {
 <br><br><br><br><br>
 <img src="画像資料/その他/scene_noMap.png" width = "30%" >　　　　<img src="画像資料/その他/mini_map.png" width = "10%" >
 <br>
-ミニマップに周囲の位置関係が表示される
-<br><br><br><br><br><br></p>
+ミニマップに周囲の位置関係が表示される</p>
+<hr>
+<p><br><br><br><br><br><br></p>
 </li>
 </ul>
 
