--- a/作品資料.html
+++ b/作品資料.html
@@ -410,6 +410,7 @@ code {
 <h4 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B0%EF%BC%91%E4%BA%BA">制作人数：１人</h4>
 <h4 id="%E5%88%B6%E4%BD%9C%E6%9C%9F%E9%96%93%EF%BC%95%E3%83%B6%E6%9C%88">制作期間：５ヶ月</h4>
 <h4 id="githuburlhttpsgithubcomtks-2000personalproductiongit">GitHubURL：<a href="https://github.com/tks-2000/PersonalProduction.git">https://github.com/tks-2000/PersonalProduction.git</a></h4>
+<h4 id="%E3%83%97%E3%83%AC%E3%82%A4%E5%8B%95%E7%94%BByoutubeurlhttpswwwyoutubecomwatchvdwkgmouzae">プレイ動画youtubeURL：<a href="https://www.youtube.com/watch?v=DWkGMO_uzaE">https://www.youtube.com/watch?v=DWkGMO_uzaE</a></h4>
 <hr>
 <h1 id="a-id--%22operation%22a%E6%93%8D%E4%BD%9C%E8%AA%AC%E6%98%8E"><a id = "operation"></a>操作説明</h1>
 <h4 id="a%E3%83%9C%E3%82%BF%E3%83%B3%E8%BF%91%E6%8E%A5%E6%94%BB%E6%92%83">Aボタン：近接攻撃</h4>
