--- a/学園祭作品資料.html
+++ b/学園祭作品資料.html
@@ -408,6 +408,7 @@ code {
 <h4 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B0%EF%BC%94%E4%BA%BA">制作人数：４人</h4>
 <h4 id="%E5%88%B6%E4%BD%9C%E6%9C%9F%E9%96%93%EF%BC%91%E3%83%B6%E6%9C%88">制作期間：１ヶ月</h4>
 <h4 id="githuburlhttpsgithubcomtks-2000teamdgit">GitHubURL：<a href="https://github.com/tks-2000/teamD.git">https://github.com/tks-2000/teamD.git</a></h4>
+<h4 id="%E3%83%97%E3%83%AC%E3%82%A4%E5%8B%95%E7%94%BByoutubeurlhttpswwwyoutubecomwatchvzoyldii4ouc">プレイ動画youtubeURL：<a href="https://www.youtube.com/watch?v=ZOylDIi4Ouc">https://www.youtube.com/watch?v=ZOylDIi4Ouc</a></h4>
 <hr>
 <h1 id="a-id--%22operation%22a%E6%93%8D%E4%BD%9C%E8%AA%AC%E6%98%8E"><a id = "operation"></a>操作説明</h1>
 <ul>
