--- a/作品資料.html
+++ b/作品資料.html
@@ -383,12 +383,15 @@ code {
 <ul>
 <li><a href="#deapthShadow">デプスシャドウ</a></li>
 <li><a href="#bloom">川瀬式ブルーム</a></li>
-<li><a href="#naviMesh">経路探索</a></li>
+<li><a href="#deferred">ディファードレンダリング</a></li>
+<li><a href="#PBR">物理ベースレンダリング(PBR)</a></li>
+<li><a href="#dithering">ディザリング</a></li>
 </ul>
 </li>
 <li>
 <h4 id="%E3%81%93%E3%81%A0%E3%82%8F%E3%81%A3%E3%81%9F%E8%A6%81%E7%B4%A0">こだわった要素</h4>
 <ul>
+<li><a href="#naviMesh">経路探索</a></li>
 <li><a href="#move">移動について</a></li>
 <li><a href="#attack">攻撃について</a></li>
 <li><a href="#enemy">エネミーの種類</a></li>
@@ -410,7 +413,7 @@ code {
 <h4 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B0%EF%BC%91%E4%BA%BA">制作人数：１人</h4>
 <h4 id="%E5%88%B6%E4%BD%9C%E6%9C%9F%E9%96%93%EF%BC%95%E3%83%B6%E6%9C%88">制作期間：５ヶ月</h4>
 <h4 id="githuburlhttpsgithubcomtks-2000personalproductiongit">GitHubURL：<a href="https://github.com/tks-2000/PersonalProduction.git">https://github.com/tks-2000/PersonalProduction.git</a></h4>
-<h4 id="%E3%83%97%E3%83%AC%E3%82%A4%E5%8B%95%E7%94%BByoutubeurlhttpswwwyoutubecomwatchvdwkgmouzae">プレイ動画youtubeURL：<a href="https://www.youtube.com/watch?v=DWkGMO_uzaE">https://www.youtube.com/watch?v=DWkGMO_uzaE</a></h4>
+<h4 id="%E3%83%97%E3%83%AC%E3%82%A4%E5%8B%95%E7%94%BByoutubeurlhttpswwwyoutubecomwatchvfzfobmazefk">プレイ動画youtubeURL：<a href="https://www.youtube.com/watch?v=fzfoBmaZEfk">https://www.youtube.com/watch?v=fzfoBmaZEfk</a></h4>
 <hr>
 <h1 id="a-id--%22operation%22a%E6%93%8D%E4%BD%9C%E8%AA%AC%E6%98%8E"><a id = "operation"></a>操作説明</h1>
 <h4 id="a%E3%83%9C%E3%82%BF%E3%83%B3%E8%BF%91%E6%8E%A5%E6%94%BB%E6%92%83">Aボタン：近接攻撃</h4>
@@ -429,9 +432,17 @@ code {
 <ul>
 <li>RenderingEngine.cpp</li>
 <li>RenderingEngine.h</li>
+<li>DeferredRendering.cpp</li>
+<li>DeferredRendering.h</li>
 <li>RenderResource.h</li>
 <li>Lighting.cpp</li>
 <li>Lighting.h</li>
+<li>DirectionLight.cpp</li>
+<li>DirectionLight.h</li>
+<li>PointLight.cpp</li>
+<li>PointLight.h</li>
+<li>SpotLight.cpp</li>
+<li>SpotLight.h</li>
 <li>Shadow.cpp</li>
 <li>Shadow.h</li>
 <li>PostEffect.cpp</li>
@@ -455,6 +466,10 @@ code {
 <li>postEffect.fx</li>
 <li>kawaseBloom.fx</li>
 <li>mapModel.fx</li>
+<li>deferredModel.fx</li>
+<li>deferredModelPBR.fx</li>
+<li>deferredLighting.fx</li>
+<li>deferredLightingPBR.fx</li>
 <li><strong>main.cpp</strong></li>
 <li><strong>Path.cpp</strong></li>
 <li><strong>Path.h</strong></li>
@@ -480,6 +495,10 @@ code {
 <ul>
 <li>Game.cpp</li>
 <li>Game.h</li>
+<li>GameScene.cpp</li>
+<li>GameScene.h</li>
+<li>SceneTransition.cpp</li>
+<li>SceneTransition.h</li>
 <li>Title.cpp</li>
 <li>Title.h</li>
 <li>TitleModels.cpp</li>
@@ -494,6 +513,8 @@ code {
 <li>Timer.h</li>
 <li>DefensiveTarget.cpp</li>
 <li>DefendiveTarget.h</li>
+<li>AttackPoint.cpp</li>
+<li>AttackPoint.h</li>
 <li>Player.cpp</li>
 <li>Player.h</li>
 <li>PlayerMove.cpp</li>
@@ -529,6 +550,8 @@ code {
 <li>EnemyEffect.h</li>
 <li>EnemySound.cpp</li>
 <li>EnemySound.h</li>
+<li>EnemySpawnPoint.cpp</li>
+<li>EnemySpawnPoint.h</li>
 <li>EnemyGenerator.cpp</li>
 <li>EnemyGenerator.h</li>
 <li>Wallker.cpp</li>
@@ -607,23 +630,61 @@ code {
 <br>
 ブラーをかけたテクスチャの平均を取った画像をシーンに加算合成して完成
 </li>
+</ul>
+<p><br><br><br><br><br><br></p>
+<ul>
 <li>
-<h3 id="a-id--%22navimesh%22a%E7%B5%8C%E8%B7%AF%E6%8E%A2%E7%B4%A2"><a id = "naviMesh"></a>経路探索</h3>
-<p> エネミーの動きがステージの障害物によって阻害されないようにするために、経路探索による移動を実装している。3ds Maxで、ステージ内の通れない場所を削除した板ポリゴンを作成し、ナビゲーションメッシュとして出力する。出力されたナビゲーションメッシュを読み込み、ポリゴン情報を元に、Aスターを使った経路探索を行う。経路に使われるポリゴンを、セルと呼ぶ。セル一つに、３頂点・中心座標・隣接セルの情報があり、隣接セルが無い場所は経路に含まれない為、経路をナビゲーションメッシュ上のみに制限できる。探索開始地点に最も近いセルから、探索終了地点までのセルの繋がりを、経路情報として作成する。経路情報によって生成された、セルの中心座標の繋がりを使って進み、中心座標に近づくと次のセルへ進むことを繰り返し、終点まで進むことで、障害物を回避して移動する経路移動の処理を実装している。
+<h3 id="a-id--%22deferred%22a%E3%83%87%E3%82%A3%E3%83%95%E3%82%A1%E3%83%BC%E3%83%89%E3%83%AC%E3%83%B3%E3%83%80%E3%83%AA%E3%83%B3%E3%82%B0"><a id = "deferred"></a>ディファードレンダリング</h3>
+<p> レンダリング手法としてディファードレンダリングを使用している。モデルを描画する際にライティングの計算を行わず、g_bufferを作成し、ライティングに必要なモデルの情報を書き込む。モデルの描画が終わった後に、g_bufferの情報を元にライティングの計算を行うので、シーンに映らないモデルや、重なって見えなくなる部分のライティングの計算を省くことができる。
 <br><br><br><br><br><br></p>
- <img src="画像資料/経路探索/stage_model.png" width = "40%">
- <br>
- ステージの3Dモデルを真上からみた図
- <br><br><br><br><br><br>
- <img src="画像資料/経路探索/naviMesh.png" width = "40%">
- <br>
- ステージの通れない所を削除した板ポリゴン
- <br><br><br><br><br><br>
+ <p>
+ <img src="画像資料/deferred/albedo.png" width = "20%">
+ <img src="画像資料/deferred/normal.png" width = "20%">
+</p>
+<p>
+ <img src="画像資料/deferred/ms.png" width = "20%">
+ <img src="画像資料/deferred/worldPos.png" width = "20%">
+</p>
+g_bufferに書き込まれた情報　アルベド(左上)・法線(右上)・メタリック＆スムース(左下)・ワールド座標(右下)
+<p><br><br><br><br><br><br></p>
+</li>
+<li>
+<h3 id="a-id--%22pbr%22a%E7%89%A9%E7%90%86%E3%83%99%E3%83%BC%E3%82%B9%E3%83%AC%E3%83%B3%E3%83%80%E3%83%AA%E3%83%B3%E3%82%B0pbr"><a id = "PBR"></a>物理ベースレンダリング(PBR)</h3>
+<p> ライティングの計算を物理ベースの計算式で行っている。主にエネルギー保存の法則やヘルムホルツの相反性を守った計算を行う事で、物理的にある程度正しい表現になっている。PBRの計算はディズニーが発表したPBRを参考に、拡散反射光は、正規化ランバート拡散反射とフレネル拡散反射を合成した実装、鏡面反射光はクックトランスモデルの鏡面反射光で計算を行っている。モデルの見た目だけではなく、ライティングの計算によって、より良い見栄えになるように工夫を行った。
+<br><br><br><br><br><br></p>
+ <p>
+ <img src="画像資料/PBR/notPBR.png" width = "20%">
+ <img src="画像資料/PBR/PBR.png" width = "20%">
+</p>
+PBRではないシーン(左) PBRのシーン(右)
+<p><br><br><br><br><br><br></p>
+</li>
+<li>
+<h3 id="a-id--%22dithering%22a%E3%83%87%E3%82%A3%E3%82%B6%E3%83%AA%E3%83%B3%E3%82%B0"><a id = "dithering"></a>ディザリング</h3>
+<p> 物体を透過する処理として、ディザリングを行っている。通常なら、物体を透過したければ半透明にすればよいだけだが、ディファードレンダリングでは、g_bufferに書き込む情報が上書きされてしまい、透過して見える部分のライティング計算が正しく行えないという問題が出てくる。半透明の物体だけ後で通常描画を行うという手法もあるが、ディファードのままで解決できる手法としてディザリングを実装した。モデルをディザパターンに従った計算でピクセルを一定の間隔で描画しないことで、疑似的に透過して見えるように描画している。透過して見える部分はモデルが描画されていないので、g_bufferが上書きされず、透過して見える部分も正しいライティング計算が
+行える。
+<br><br><br><br><br><br></p>
+<img src="画像資料/dithering/dithering.png" width = "50%">
+<br>
+手前にある壁がディザリングで透過されている様子
+<p><br><br><br><br><br><br></p>
 </li>
 </ul>
 <hr>
 <h1 id="a-id--%22kodawari%22a%E3%81%93%E3%81%A0%E3%82%8F%E3%81%A3%E3%81%9F%E8%A6%81%E7%B4%A0"><a id = "kodawari"></a>こだわった要素</h1>
 <ul>
+<li>
+<h3 id="a-id--%22navimesh%22a%E7%B5%8C%E8%B7%AF%E6%8E%A2%E7%B4%A2"><a id = "naviMesh"></a>経路探索</h3>
+<p> エネミーの動きがステージの障害物によって阻害されないようにするために、エンジンの機能を使って、経路探索による移動を実装している。3ds Maxで、ステージ内の通れない場所を削除した板ポリゴンを作成し、ナビゲーションメッシュとして出力する。出力されたナビゲーションメッシュを読み込み、ポリゴン情報を元に経路探索を行い、得られた情報を利用してエネミーの移動を行っている。
+<br><br><br><br><br><br></p>
+ <img src="画像資料/経路探索/stage_model.png" width = "40%">
+ <br>
+ ステージの3Dモデル
+ <br><br><br><br><br><br>
+ <img src="画像資料/経路探索/naviMesh.png" width = "40%">
+ <br>
+ ステージの通れない所を削除した板ポリゴン(ナビゲーションメッシュ)
+</li>
 <li>
 <h3 id="a-id--%22move%22a%E7%A7%BB%E5%8B%95%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6"><a id = "move"></a>移動について</h3>
 <p> プレイヤーとエネミーの移動には慣性が乗るようになっており滑らかな移動を表現している。急な移動方向の変化が起こっても、いきなり移動方向が切り替わらずに、緩やかに変化するようになっている。</p>
