ポートフォリオ修正

--- a/作品資料.html
+++ b/作品資料.html
@@ -410,8 +410,9 @@ code {
 <h4 id="%E4%BD%BF%E7%94%A8%E3%83%84%E3%83%BC%E3%83%ABvisual-studio-2019visual-studio-code3ds-max-2022renderdoc">使用ツール：Visual Studio 2019、Visual Studio Code、3ds Max 2022、RenderDoc</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E3%83%A9%E3%82%A4%E3%83%96%E3%83%A9%E3%83%AAeffekseerdirectxtk12">使用ライブラリ：Effekseer、DirectXTK12</h4>
 <h4 id="%E5%8B%95%E4%BD%9C%E7%92%B0%E5%A2%83windows10directx12">動作環境：Windows10、DirectX12</h4>
-<h4 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B0%EF%BC%91%E4%BA%BA">制作人数：１人</h4>
-<h4 id="%E5%88%B6%E4%BD%9C%E6%9C%9F%E9%96%93%EF%BC%95%E3%83%B6%E6%9C%88">制作期間：５ヶ月</h4>
+<h4 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B01%E4%BA%BA">制作人数：1人</h4>
+<h4 id="%E5%88%B6%E4%BD%9C%E6%9C%9F%E9%96%936%E3%83%B6%E6%9C%88">制作期間：6ヶ月</h4>
+<h4 id="%E8%A3%BD%E4%BD%9C%E6%99%82%E9%96%93%E7%B4%84350%E6%99%82%E9%96%93">製作時間：約350時間</h4>
 <h4 id="githuburlhttpsgithubcomtks-2000personalproductiongit">GitHubURL：<a href="https://github.com/tks-2000/PersonalProduction.git">https://github.com/tks-2000/PersonalProduction.git</a></h4>
 <h4 id="%E3%83%97%E3%83%AC%E3%82%A4%E5%8B%95%E7%94%BByoutubeurlhttpswwwyoutubecomwatchvfzfobmazefk">プレイ動画youtubeURL：<a href="https://www.youtube.com/watch?v=fzfoBmaZEfk">https://www.youtube.com/watch?v=fzfoBmaZEfk</a></h4>
 <hr>
