--- a/学園祭作品資料.html
+++ b/学園祭作品資料.html
@@ -399,14 +399,15 @@ code {
 <h4 id="%E4%BD%9C%E5%93%81%E5%90%8Dstrikergirls">作品名：StrikerGirls</h4>
 <p><img src="image/title.png" width = "80%" ><br>
  ステージに一つあるボールを蹴って、他のプレイヤーにぶつけてスコアを稼ぎ、誰が一番多くスコアを多く稼げるかを競う対戦アクションゲーム。２０２１年７月の河原学園学園祭に向けて制作し、展示を行った。</p>
-<h4 id="%E3%83%97%E3%83%AC%E3%82%A4%E4%BA%BA%E6%95%B0%EF%BC%92%EF%BC%94%E4%BA%BA">プレイ人数：２～４人</h4>
+<h4 id="%E3%83%97%E3%83%AC%E3%82%A4%E4%BA%BA%E6%95%B024%E4%BA%BA">プレイ人数：2～4人</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%B3%E5%AD%A6%E5%86%85%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%B3%E3%82%92%E6%94%B9%E9%80%A0%E3%81%97%E3%81%9F%E7%89%A9">使用エンジン：学内エンジンを改造した物</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E8%A8%80%E8%AA%9Echlsl">使用言語：C++、HLSL</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E3%83%84%E3%83%BC%E3%83%ABvisual-studio-2019visual-studio-code">使用ツール：Visual Studio 2019、Visual Studio Code</h4>
 <h4 id="%E4%BD%BF%E7%94%A8%E3%83%A9%E3%82%A4%E3%83%96%E3%83%A9%E3%83%AAeffekseerdirectxtk12">使用ライブラリ：Effekseer、DirectXTK12</h4>
 <h4 id="%E5%8B%95%E4%BD%9C%E7%92%B0%E5%A2%83windows10directx12">動作環境：Windows10、DirectX12</h4>
-<h4 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B0%EF%BC%94%E4%BA%BA">制作人数：４人</h4>
-<h4 id="%E5%88%B6%E4%BD%9C%E6%9C%9F%E9%96%93%EF%BC%91%E3%83%B6%E6%9C%88">制作期間：１ヶ月</h4>
+<h4 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B04%E4%BA%BA">制作人数：4人</h4>
+<h4 id="%E5%88%B6%E4%BD%9C%E6%9C%9F%E9%96%931%E3%83%B6%E6%9C%88">制作期間：1ヶ月</h4>
+<h4 id="%E5%88%B6%E4%BD%9C%E6%99%82%E9%96%93%E7%B4%84150%E6%99%82%E9%96%93">制作時間：約150時間</h4>
 <h4 id="githuburlhttpsgithubcomtks-2000teamdgit">GitHubURL：<a href="https://github.com/tks-2000/teamD.git">https://github.com/tks-2000/teamD.git</a></h4>
 <h4 id="%E3%83%97%E3%83%AC%E3%82%A4%E5%8B%95%E7%94%BByoutubeurlhttpswwwyoutubecomwatchvzoyldii4ouc">プレイ動画youtubeURL：<a href="https://www.youtube.com/watch?v=ZOylDIi4Ouc">https://www.youtube.com/watch?v=ZOylDIi4Ouc</a></h4>
 <hr>
